v0.1.x/_sources/reference/fury.colormap.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`colormap`
===============
.. automodule:: fury.colormap

.. currentmodule:: fury.colormap
.. autosummary::

   boys2rgb
   cc
   colormap_lookup_table
   create_colormap
   get_cmap
   line_colors
   optional_package
   orient2rgb
   pjoin
   ss
   warn


.. currentmodule:: fury.colormap

boys2rgb
~~~~~~~~

.. autofunction:: boys2rgb

cc
~~

.. autofunction:: cc

colormap_lookup_table
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: colormap_lookup_table

create_colormap
~~~~~~~~~~~~~~~

.. autofunction:: create_colormap

get_cmap
~~~~~~~~

.. autofunction:: get_cmap

line_colors
~~~~~~~~~~~

.. autofunction:: line_colors

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

orient2rgb
~~~~~~~~~~

.. autofunction:: orient2rgb

pjoin
~~~~~

.. autofunction:: pjoin

ss
~~

.. autofunction:: ss

warn
~~~~

.. autofunction:: warn

