v0.8.x/_sources/reference/fury.colormap.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`colormap`
===============
.. automodule:: fury.colormap

.. currentmodule:: fury.colormap
.. autosummary::

   LookupTable
   boys2rgb
   cc
   colormap_lookup_table
   create_colormap
   distinguishable_colormap
   get_cmap
   get_xyz_coords
   hex_to_rgb
   hsv2rgb
   lab2rgb
   lab2xyz
   line_colors
   optional_package
   orient2rgb
   pjoin
   rgb2hsv
   rgb2lab
   rgb2xyz
   ss
   warn
   xyz2lab
   xyz2rgb


.. currentmodule:: fury.colormap


:class:`LookupTable`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LookupTable
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

boys2rgb
~~~~~~~~

.. autofunction:: boys2rgb

cc
~~

.. autofunction:: cc

colormap_lookup_table
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: colormap_lookup_table

create_colormap
~~~~~~~~~~~~~~~

.. autofunction:: create_colormap

distinguishable_colormap
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: distinguishable_colormap

get_cmap
~~~~~~~~

.. autofunction:: get_cmap

get_xyz_coords
~~~~~~~~~~~~~~

.. autofunction:: get_xyz_coords

hex_to_rgb
~~~~~~~~~~

.. autofunction:: hex_to_rgb

hsv2rgb
~~~~~~~

.. autofunction:: hsv2rgb

lab2rgb
~~~~~~~

.. autofunction:: lab2rgb

lab2xyz
~~~~~~~

.. autofunction:: lab2xyz

line_colors
~~~~~~~~~~~

.. autofunction:: line_colors

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

orient2rgb
~~~~~~~~~~

.. autofunction:: orient2rgb

pjoin
~~~~~

.. autofunction:: pjoin

rgb2hsv
~~~~~~~

.. autofunction:: rgb2hsv

rgb2lab
~~~~~~~

.. autofunction:: rgb2lab

rgb2xyz
~~~~~~~

.. autofunction:: rgb2xyz

ss
~~

.. autofunction:: ss

warn
~~~~

.. autofunction:: warn

xyz2lab
~~~~~~~

.. autofunction:: xyz2lab

xyz2rgb
~~~~~~~

.. autofunction:: xyz2rgb

